<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signup.SignUpOptionalsFragment"
>
    <data>
        <variable
            name="viewModel"
            type="com.employa.employa.viewmodel.SignUpViewModel"/>
        <variable
            name="profilePictureChooser"
            type="com.employa.employa.ui.components.ProfilePictureChooser" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/signup_complete_account_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/signup_complete_account_baseline"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/profile_picture"
            android:textAllCaps="true" />


    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/profile_picture"
        android:cropToPadding="false"
        android:src="@drawable/icon_profile"
        app:imageUrl="@{viewModel.profilePictureMutableData}" />

        <Button
            android:id="@+id/btn_choose_picture"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:elevation="0dp"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:onClick="@{() -> profilePictureChooser.choosePicture()}"
            android:text="@string/button_choose_image" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/signup_profile_description"
            android:textAllCaps="true" />

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:autofillHints="@string/signup_profile_description"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/signup_profile_description_placeholder"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:text="@={viewModel.descriptionMutableData}"
        android:maxLength="500"
        android:maxLines="4"
        android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_profile_description_explainer"
            android:textAlignment="textEnd"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_continue"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/button_continue" />

    </LinearLayout>
    </ScrollView>
</layout>