<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signup.SignUpConfirmationFragment"
    >
    <data>
        <variable
            name="viewModel"
            type="com.employa.employa.viewmodel.SignUpViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/signup_confirmation_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/signup_confirmation_baseline"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/profile_picture"
            android:textAllCaps="true" />


    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/profile_picture"
        android:cropToPadding="false"
        android:src="@drawable/icon_profile"
        app:imageUrl="@{viewModel.profilePictureMutableData}"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/user_name"
            android:textAllCaps="true" />

    <TextView
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/montserrat"
        android:maxLines="1"
        android:text="@{viewModel.nameMutableData}"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/montserrat"
        android:maxLines="1"
        android:text="@{viewModel.emailMutableData}"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/signup_profile_description"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/montserrat"
        android:maxLength="500"
        android:maxLines="3"
        android:text="@{viewModel.descriptionMutableData}"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_continue"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/button_signup" />

    </LinearLayout>
    </ScrollView>
</layout>